src/test/resources/tests/typeError/conditionalMixedTypes.qg

init {
    true ? 1 : false
}

run true

input(a,b) true